--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,31 @@
+# Bazel
 bazel-*
-.vscode*
+
+# Environments
+.python-version
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDEA
+.idea/
+
+# VS Code
+.vscode/
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vim
+.*swp
+
+# Python wheels
+*.whl
